Ok, I have added a new update_N to reset the thumbnail and ffmpeg command to the default since we are going from %val to !val. Added new option to disable the nice command for window users. Fixed default widget dimensions. Fixed error messages when using the t() function. Fixed video naming to not overwrite converted filename. Fixed css layout bug when using mulitple filefield uploads. Removed admin.js Fixed multiple video_thumb folders being created.

--- a/css/video.css
+++ b/css/video.css
@@ -113,6 +113,8 @@ br.video_image_clear {
   max-width:70%;
 }
 
+.widget-edit .form-item { white-space: normal !important; }
+
 .admin_flv_player_wrapper { display: none; }
 /*
  * VIDEO OJBECT FIXES CROSS BROWSER
